Fix regression with top header on iPhone in compose view

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.7.3rc2-nightly */
+   1.7.3rc3-nightly */
 
 /* CSS variables */
 :root {
@@ -3394,8 +3394,14 @@ body.embed .button.logo-button:hover,
   }
 
   /* Fix top header overlapping in /publish on iPhone */
-  .columns-area--mobile {
-    z-index: 5;
+  .layout-multiple-columns .ui::after {
+    z-index: 0;
+  }
+
+  .layout-multiple-columns .columns-area--mobile .navigation-bar {
+    background-color: var(--color-bg);
+    position: relative;
+    z-index: 2;
   }
 }
 
